--- a/实例笔记/2.标签进阶属性.html
+++ b/实例笔记/2.标签进阶属性.html
@@ -21,6 +21,8 @@
     <p id="b">666</p>
     <a href="#b" target="">666</a>
     <hr>
+    
+    <!-- 列表可用于减少代码量，如网页抬头，网页尾 -->
     <!-- 无序列表 -->
     <!-- type:square方块 disc实心圆点 circle空心圆点 none不显示符号 -->
     <ul type="circle">王者荣耀
